# computer_graphics_hw0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: geometry3.hpp  main.cpp
